# Casio3D_Engine

./: CMakeLists.txt  ConfigMake.py  Makefile  MakefileLinux  MakefileWin  README.md  config.json
ConvertMake/: ConvertImage.py  ConvertMapRPG.py  ConvertWorld.py
ConvertMake/RPG/: RPG_MakerTilesets.py
assets/assets-cg/: Icon Planet Casio.psd
assets/assets-cg/Fonts/: fxconv-metadata.txt
assets/assets-cg/Images/: fxconv-metadata.txt
assets/assets-win/Images/Items.sprite/: tempo.py
assets/worlds/: Intro.world  LevelDemo.world
src/: main.c
src/Engine3D/: Block.c  Block.h  Camera.c  Camera.h  Collider.c  Collider.h  DialogueSystem.c  DialogueSystem.h  Entity.c  Entity.h  Light.c  Light.h  Particle.h  World.c  World.h
src/Examples/: ExampleUI.c  Examples.h  Ressources.c  Ressources.h
src/InterfaceSystem/: EventDataSystem.c  EventDataSystem.h  InterfaceSystem.c  InterfaceSystem.h  Sprite.c  Sprite.h
src/ParticuleEngine/: ParticuleEngine.c  ParticuleEngine.h  ParticuleEngineFont.c  ParticuleEngineFont.h  ParticuleEngineInput.c  ParticuleEngineInput.h  ParticuleEngineTexture.c  ParticuleEngineTexture.h  Resources.c  Resources.h
